# PNSB

./: .gitignore  README.md  Tnseq_heatmap.R  circos.R
workflow_1_model_reconstruction/: .gitignore  README.md  fba_final_default_fluxes.csv  flux_Photo.csv  flux_consensus.csv  geneIDs_matrix.csv  iDT1294Photo.json  iDT1294Photo.xml  manual_curation.ipynb  metabolic_network_reconstruction_project.py  na_matrix.csv  pipeline_run_report.json  pyproject.toml  reaction_gene_relationships.csv  updated_consensus.json
workflow_1_model_reconstruction/Models/: DSM123.json  DSM123_manual_working.json  purple_bacteriav_DSM123.json
workflow_1_model_reconstruction/bbh/: Rpal_BisA53_vs_DSM123.txt
workflow_1_model_reconstruction/bigg_resources/: blast_bigg_db.pjs  blast_bigg_db.pot  blast_bigg_db.psq  blast_bigg_db.pto  global_gene_to_rxn.json
workflow_1_model_reconstruction/genomes/: DSM123.fna.ndb  DSM123.fna.nhr  DSM123.fna.nin
workflow_1_model_reconstruction/manual_curation_outputs_merged/: methods_draft_detailed.md
workflow_1_model_reconstruction/plot/: README.md  Supplementary File S1. DSM 123 RNA-seq DEG.xlsx  Supplementary_Methods.docx  dfba_parameters.csv  enzyme_constrained_dfba.ipynb  formate_light_scan.ipynb  kinetics.csv  mm_dfba_20mM_abundance_bar_data.csv  mm_dfba_20mM_active_diffusion_plot_data.csv  mm_dfba_20mM_fort_parameter_sensitivity_data.csv  mm_dfba_module_capacity_scaling_data.csv  mm_enzyme_constraint_all_parameters_metabolites_normalized.csv  mm_enzyme_constraint_all_parameters_metabolites_normalized.xlsx  reaction_parameters.csv  substrates.csv  (+5 more)
(+129 files in other folders)
